# AirSketch

./: .gitignore  AirSketch.spec  AirSketch_MidProject.pptx  AirSketch_MidProject_v2.pptx  HANDOFF.md  LAUNCHER.md  OPENVINO_HAND_TRACKING_PLAN.md  README.md  RUN_ME.txt  SESSION_HANDOFF.md  SETUP_LOCAL.md  build_dist.py  build_exe.bat  fetch_models.py  launcher.py  make_icon.py  pyproject.toml  requirements.txt  test_voice_live.py
docs/: BOOK_GUIDE.md  DELIVERABLES_README.md  PRESENTATION_GUIDE.md  PROJECT_COMPENDIUM.md  intel_npu_setup.md  model_download.md
models/: class_names.json
src/airsketch/: __init__.py  beautifier.py  board_capture.py  camera.py  config.py  diagram_analyzer.py  effects.py  exporter.py  gesture_detector.py  hand_tracker.py  hand_tracker_ov.py  hebrew_text.py  image_gen.py  inference_engine.py  lesson_llm.py  main.py  notebook.py  ocr_reader.py  overlay.py  primitive_classifier.py  shape_recognizer.py  sketch_classifier.py  sketch_cnn.py  speaker_id.py  stroke.py  utils.py  video_source.py  voice.py
src/airsketch/classroom/: __init__.py  __main__.py  app.py  celebration.py  challenge_engine.py  judge.py  voice_commands.py  (+1 more)
tests/: test_board_capture.py  test_classroom.py  test_gesture_detector.py  test_hand_tracker_ov.py  test_hebrew.py  test_launcher.py  test_lesson_llm.py  test_lesson_report.py  test_notebook.py  test_ocr_reader.py  test_primitive_classifier.py  test_sketch_classifier.py  test_speaker_id.py  test_voice_commands.py  test_voice_controller.py
training/: README.md  download_quickdraw.py  setup_whisper.py  train_sketch_cnn.py
